syntax = "proto3";

package taskreminder;

service TaskService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc LoginUser(LoginRequest) returns (UserResponse);
  rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
  rpc GetTasks(GetTasksRequest) returns (TasksResponse);
  rpc CreateReminder(CreateReminderRequest) returns (ReminderResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message CreateTaskRequest {
  string userId = 1;
  string title = 2;
  string description = 3;
  string priority = 4;
  string dueDate = 5;
  bool isRecurring = 6;
  string recurrencePattern = 7;
}

message TaskResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string priority = 4;
  string dueDate = 5;
  bool isCompleted = 6;
}

message GetTasksRequest {
  string userId = 1;
}
Ì€
message TasksResponse {
  repeated TaskResponse tasks = 1;
}

message CreateReminderRequest {
  string taskId = 1;
  string userId = 2;
  string remindAt = 3;
}

message ReminderResponse {
  string id = 1;
  string taskId = 2;
  string remindAt = 3;
}
